refactor find by one condition tests